# game-world-championship

./: README.md  cards.csv  output.csv
card_generator/: card_config.toml  configuration.toml  pyproject.toml
card_generator/src/card_generator/: __init__.py  __main__.py  abilities.py  base.py  cli.py  stats.py
card_generator/tests/: test_abilities.py  test_base.py  test_stats.py
design/: mechanics-thoughts  mechanics-thoughts.md  research.md
game/v1/: cards.csv
game/v1/playtest-notes/: 20240105.md
game/v2/: README.md  back.nde  cards.csv  cards.nde  playtest-2025-07-04.md  rules.md
game/v2/playtest-components/: .gitignore  cards.nde  generate_deck_png.py
game/v2/playtest-components/templates/: Attack.jinja  Card.jinja  Concealed.jinja  Layout.jinja  Lesson.jinja
html-card-generator/: README.md  pyproject.toml
html-card-generator/src/tts_generator/: __init__.py  __main__.py
html-card-generator/src/tts_generator/templates/: Card.jinja  CardBack.jinja  Layout.jinja  __init__.py
rules/: README.md  index.md
